* The following modules are now disabled in the default configuration run:
 * `module_raw arctic2`
 * `module_raw corgi`
 * `module_raw collie`
 * `module_raw dmc`
 * `module_raw h3600`
 * `module_raw mk712`
 * `module_raw ucb1x00`
 Users of those modules must enable them, like `./configure --enable-arctic2`
* Automatic touchscreen device detection for Linux (if not defined by the user)

This release includes the following bugfixes:
* 93ac81d autoconf: disable dependency tracking by default (fixes out-of-source builds)
* f4cd766 waveshare-raw: fix snprintf error in finding a device in ts_read()
* 57d9081 debounce: drop samples irrespective of pressure value
* 5822386 waveshare: fix resource leak


tslib 1.13 - released 2017-09-14
================================

This release includes libts version 0.8.0 and the following changes:
* Added ts_open_restricted() and ts_close_restricted() API
* Added TSLIB_MT_VALID bit definition for ts_sample_mt's valid flag
* `module_raw galax` is now disabled in the default configuration.
  Please use `module_raw input` instead.

This release includes the following bugfixes:
* 18dfd8b remove build dependency on pkg-config
* f10104e configure.ac: add GNU/kFreeBSD to build config
* b8594cc input-raw: Don't require to have the EV_KEY event type
* 1ad02d4 input-raw.c: support MT-only devices in ts_read()
* 00c69d6 fix static building for galax and cy8mrln-palmpre
* 5a8b080 Update fbutils-linux.c to fix fillrect only drawing first y line


tslib 1.12 - released 2017-08-29
================================

This release includes libts version 0.7.2 and the following changes:
* Generate a tracking ID value for multitouch type A devices
* Add experimental `--with-sdl2` configuration option for `ts_calibrate` and `ts_test_mt`

This release includes the following bugfixes:
* 74f527e configure.ac: fix help text by defining only one default configuration


tslib 1.11 - released 2017-06-06
================================
