@@ -104,6 +104,7 @@ TSLIB_CHECK_MODULE([linear], [yes], [Enable building of linear scaling])
 TSLIB_CHECK_MODULE([median], [yes], [Enable building of median filter])
 TSLIB_CHECK_MODULE([pthres], [yes], [Enable building of pthres filter])
 TSLIB_CHECK_MODULE([skip], [yes], [Enable building of skip filter])
+TSLIB_CHECK_MODULE([lowpass], [yes], [Enable building of lowpass filter])
 TSLIB_CHECK_MODULE([variance], [yes], [Enable building of variance filter])
 
 # hardware access modules
