@@ -28,6 +28,9 @@ module pthres pmin=1
 # Uncomment if needed (single touch only)
 # module variance delta=30
 
+# Uncomment if needed
+# module lowpass factor=0.1 threshold=1
+
 # Uncomment if needed to filter noise samples
 module dejitter delta=100
 
