@@ -10,6 +10,7 @@ TSLIB_DECLARE_MODULE(pthres);
 TSLIB_DECLARE_MODULE(debounce);
 TSLIB_DECLARE_MODULE(skip);
 TSLIB_DECLARE_MODULE(iir);
+TSLIB_DECLARE_MODULE(lowpass);
 
 TSLIB_DECLARE_MODULE(arctic2);
 TSLIB_DECLARE_MODULE(collie);
